feat: provide swagger api for sign in user
