# pkg/response/response.go
@@ -2,8 +2,16 @@ package response
 
 import "github.com/gofiber/fiber/v2"
 
+// HTTPError struct to HTTPError object.
+type HTTPError struct {
+	ErrorMessage interface{} `json:"errorMessage"`
+}
+
 func RespondError(c *fiber.Ctx, responseCode int, errMessage interface{}) error {
-	return c.Status(responseCode).JSON(errMessage)
+	errorJson := &HTTPError{
+		ErrorMessage: errMessage,
+	}
+	return c.Status(responseCode).JSON(errorJson)
 }
 
 func RespondSuccess(c *fiber.Ctx, responseCode int, data interface{}) error {
